revise settings topic

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,7 @@
 
 - write contributor guidelines
 - a glossary seems to be in order (buffer, etc) ??
-- hook up the topical guide from the index and vice versa
+ta hook up the topical guide from the index and vice versa
 - eventually make the topical guide the front page, and refer to the toc from there
 - add appendixes for stuff like the key bindings?
 - ...
