change license to CC by-nc-nd
http://creativecommons.org/licenses/by-nc-nd/4.0/

Update LICENSE.md with correct information.

If you've made an original contribution (different than grammatical
corrections or format transformations like listing key bindings) and you don't
agree to this change, please get in touch with us. We'll remove your part(s)
from the documentation.

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,1 +1,2 @@
-Guillermo López-Anglada (guillermooo)
+Guillermo López-Anglada <guillermo.lopez@outlook.com>
+FichteFoll <fichtefoll2@googlemail.com>
